tests/negative/semantic/if_condition_int/input.ci
void main() {
    if (1) {
        print("x\n");
    }
}
